Changes
=======

1.0.11 (TBD)
------------

- Options --gdal-data and --proj-data have been added to the rio-env command so
  that users of Rasterio wheels can get paths to set GDAL_DATA and PROJ_LIB
  environment variables.
- The attempt to make GDAL and PROJ support file discovery and configuration
  automatic within methods of the CRS class has been reverted. Users must
  execute such code inside a `with Env()` block or set the GDAL_DATA and
  PROJ_LIB environment variables needed by GDAL.

1.0.10 (2019-11-16)
-------------------

- Avoid segmentation fault when OSRGetAuthority* functions return null
  pointers, making Rasterio more robust when reading CRS that don't map
  perfectly to PROJ.
- Ensure that GDAL and PROJ support files can be found in Rasterio wheels when
  we call CRS methods (#1539).
- Accomodate the Esri flavor of projection WKT (#1537).
- Add missing raster offsets and scales properties (#1527).

1.0.9 (2019-10-25)
------------------

Bug fixes:

- Delegate test of the environment for existing session credentials to the
  session class to generalize credentialization of GDAL to cloud providers
  other than AWS (#1520). The env.hascreds function is no longer used in
  Rasterio and has been marked as deprecated.
- Switch to use of botocore Credentials.get_frozen_credentials (#1521).
- Numpy masked arrays with the normal Numpy mask sense (True == invalid) are
  now supported as input for feature.shapes(). The mask keyword argument of the
  function keeps to the GDAL sense of masks (nonzero == invalid) and the
  documentation has been improved to communicate this (#1517).
- The defaults for WarpedVRT's `src_nodata` and `nodata` keyword arguments are
  no longer None, but are markers for the default behavior: inheritance of
  nodata values from the VRT's source dataset. Values of `None` for these
  keyword arguments means that the VRT does not inherit from the source and has
  no nodata value at all (#1503).