@@ -4,6 +4,7 @@ Changes
 1.0.11 (TBD)
 ------------
 
+- The GDAL band cache is flushed at the top of build_overviews to fix #1497.
 - Options --gdal-data and --proj-data have been added to the rio-env command so
   that users of Rasterio wheels can get paths to set GDAL_DATA and PROJ_LIB
   environment variables.
